[editor] IJPL-254585 fix warnings in EditorImpl, EditorComponentImpl, EditorView
GitOrigin-RevId: 56dfb3065bd8ae99bcf65eaab850287eb10f48d3